force-app/main/default/objects/StudyLog__c/StudyLog__c.object-meta.xml
<CustomObject>
    <description>Records daily English learning quiz activity and results for each Salesforce user.</description>
    <label>Study Log</label>
    <nameField>
        <displayFormat>SL-{000000}</displayFormat>
        <label>Study Log Number</label>
        <startingNumber>1</startingNumber>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Study Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>