force-app/main/default/objects/StudyLog__c/fields/CorrectCount__c.field-meta.xml
<CustomField>
    <fullName>CorrectCount__c</fullName>
    <description>Stores the number of correct quiz answers during the study activity.</description>
    <inlineHelpText>Enter the number of quiz questions answered correctly in this study session.</inlineHelpText>
    <label>Correct Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>