force-app/main/default/objects/StudyLog__c/fields/QuizCount__c.field-meta.xml
<CustomField>
    <fullName>QuizCount__c</fullName>
    <description>Stores the number of quiz questions attempted during the study activity.</description>
    <inlineHelpText>Enter the total number of quiz questions attempted in this study session.</inlineHelpText>
    <label>Quiz Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>