force-app/main/default/objects/StudyLog__c/fields/StudyDate__c.field-meta.xml
<CustomField>
    <fullName>StudyDate__c</fullName>
    <description>Stores the date on which the English learning activity occurred.</description>
    <inlineHelpText>Enter the date represented by this study log.</inlineHelpText>
    <label>Study Date</label>
    <type>Date</type>
</CustomField>