force-app/main/default/objects/StudyLog__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associates the study activity with the Salesforce user who completed it.</description>
    <inlineHelpText>Select the Salesforce user whose learning activity is recorded.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Study Logs</relationshipLabel>
    <relationshipName>StudyLogs</relationshipName>
    <type>Lookup</type>
</CustomField>